--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Odin Project: Calculator</title>
-    <script src="./js/script.js" defer></script>
+    <script src="./js/script.js" defer>
+        import { operation } from './logic';
+    </script>
 </head>
 <body>
     <div class="calc-container">
 
-        <div class="display">101</div>
+        <div class="display"></div>
         <div class="op-container">
             <button id="add" class="op">+</button>
             <button id="minus" class="op">-</button>
@@ -30,7 +32,7 @@
             <button class="num">9</button>
         </div>
 
-        <button>clear</button>
+        <button id="clear">clear</button>
     </div>
 
 </body>
