Fix bug in delete function: 2nd number not inputing after being deleted

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             
             <div class="numbers-container">
                 <div class="display-clear-container">
+                    <button id="delete">delete</button>
                     <div class="display"></div>
                     <button id="clear">clear</button>
                 </div>
